// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications setNotificationsAsync before the study starts 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T08:51:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T10:45:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T12:25:25.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T17:15:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T18:31:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T23:25:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T08:43:31.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T11:11:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T12:21:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T16:49:29.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T18:52:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T23:05:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T08:21:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T11:09:38.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T12:51:29.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T16:10:38.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T19:13:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T22:14:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T08:14:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T10:56:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T13:02:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T16:45:03.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T18:29:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T22:41:54.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (1 ping from reaching bonus) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T17:19:24.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T19:01:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:49:13.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:39:16.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T10:44:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:15:43.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:56:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T18:07:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T22:53:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T08:39:23.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:24:09.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:45:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:22:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T18:18:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:21:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:30:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T10:07:45.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T13:07:27.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:10:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T18:05:08.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T22:19:19.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (no bonus is set) (jump to next week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T16:47:01.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T18:55:42.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T22:46:21.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T09:01:30.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T11:05:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T12:18:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T16:42:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T18:22:24.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T22:23:25.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T08:55:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T10:15:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T12:27:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T16:05:30.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T18:34:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T23:23:59.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T09:20:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T10:18:13.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T13:03:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T16:15:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T18:29:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T22:27:55.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (no bonus is set) (stay in current week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T19:01:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:49:13.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:39:16.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T10:44:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:15:43.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:56:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T18:07:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T22:53:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T08:39:23.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:24:09.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:45:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:22:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T18:18:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:21:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:30:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T10:07:45.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T13:07:27.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:10:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T18:05:08.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T22:19:19.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (reached bonus) (jump to next week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T16:47:01.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T18:55:42.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-15T22:46:21.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T09:01:30.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T11:05:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T12:18:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T16:42:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T18:22:24.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-16T22:23:25.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T08:55:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T10:15:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T12:27:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T16:05:30.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T18:34:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-17T23:23:59.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T09:20:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T10:18:13.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T13:03:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T16:15:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T18:29:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-18T22:27:55.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (reached bonus) (stay in current week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T19:01:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:49:13.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:39:16.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T10:44:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:15:43.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:56:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T18:07:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T22:53:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T08:39:23.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:24:09.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:45:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:22:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T18:18:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:21:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:30:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T10:07:45.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T13:07:27.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:10:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T18:05:08.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "Do it now!",
        "title": "New survey!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T22:19:19.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (still haven't reached bonus) (jump to next week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T12:25:25.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T17:15:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T18:31:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-01T23:25:04.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T08:43:31.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T11:11:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T12:21:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T16:49:29.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T18:52:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 3 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-02T23:05:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T08:21:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T11:09:38.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T12:51:29.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T16:10:38.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T19:13:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T22:14:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T08:14:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T10:56:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T13:02:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T16:45:03.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T18:29:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T22:41:54.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync during the survey (still haven't reached bonus) (stay in current week) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T11:09:38.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T12:51:29.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T16:10:38.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T19:13:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-03T22:14:37.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T08:14:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T10:56:40.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T13:02:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T16:45:03.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T18:29:02.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-04T22:41:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T08:55:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T10:36:58.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T12:33:53.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T16:32:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T18:21:32.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-05T22:57:55.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T08:56:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T10:39:22.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T12:19:39.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T17:23:46.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T18:01:06.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-06T23:09:30.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync near study ends 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-28T23:19:14.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T09:02:18.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T11:09:55.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T12:48:58.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T17:07:12.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T18:59:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-29T22:10:30.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T09:17:24.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T11:16:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T12:01:50.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T17:06:48.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 5 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-30T19:08:26.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync with existing notifications (at the start of the day) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T08:11:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T10:22:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T12:33:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T16:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T18:55:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:39:16.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T10:44:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:15:43.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:56:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T18:07:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T22:53:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T08:39:23.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:24:09.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:45:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:22:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T18:18:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:21:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:30:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T10:07:45.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T13:07:27.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:10:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T18:05:08.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 4 pings away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T22:19:19.000Z,
      },
    },
  ],
]
`;

exports[`notifications setNotificationsAsync with existing notifications (in the middle of the day) 1`] = `
Array [
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T16:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T18:55:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-11T22:44:07.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T08:39:16.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T10:44:49.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T12:15:43.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T16:56:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T18:07:56.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-12T22:53:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T08:39:23.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T10:24:09.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T12:45:33.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T16:22:20.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T18:18:44.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-13T22:21:26.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T08:30:54.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T10:07:45.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T13:07:27.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T17:10:35.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T18:05:08.000Z,
      },
    },
  ],
  Array [
    Object {
      "content": Object {
        "badge": 1,
        "body": "You are 1 ping away from the weekly bonus.",
        "title": "You can earn bonus!",
      },
      "trigger": Object {
        "channelId": "ssnlPingChannel",
        "date": 2010-05-14T22:19:19.000Z,
      },
    },
  ],
]
`;

exports[`pings data match: getAnswersAsync 1`] = `Array []`;

exports[`pings data match: getPingsAsync 1`] = `
Array [
  Object {
    "endTime": 2010-05-01T08:39:40.000Z,
    "id": "cat1",
    "notificationTime": 2010-05-01T08:25:05.000Z,
    "startTime": 2010-05-01T08:30:01.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": null,
    "id": "dog1",
    "notificationTime": 2010-05-01T10:20:00.000Z,
    "startTime": 2010-05-01T10:20:05.000Z,
    "streamName": "dog",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-01T20:59:20.000Z,
    "id": "wolf1",
    "notificationTime": 2010-05-01T19:00:05.000Z,
    "startTime": 2010-05-01T20:06:21.000Z,
    "streamName": "wolf",
    "tzOffset": 0,
  },
  Object {
    "endTime": null,
    "id": "cat2",
    "notificationTime": 2010-05-02T13:08:04.000Z,
    "startTime": 2010-05-02T14:59:01.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-03T09:26:02.000Z,
    "id": "cat3",
    "notificationTime": 2010-05-03T09:08:07.000Z,
    "startTime": 2010-05-03T09:26:00.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-10T23:59:58.000Z,
    "id": "cat4",
    "notificationTime": 2010-05-10T23:08:07.000Z,
    "startTime": 2010-05-10T23:09:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T08:19:58.000Z,
    "id": "cat5",
    "notificationTime": 2010-05-11T08:08:07.000Z,
    "startTime": 2010-05-11T08:09:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T10:11:58.000Z,
    "id": "dog2",
    "notificationTime": 2010-05-11T10:09:07.000Z,
    "startTime": 2010-05-11T10:10:09.000Z,
    "streamName": "dog",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T12:30:58.000Z,
    "id": "wolf2",
    "notificationTime": 2010-05-11T12:10:07.000Z,
    "startTime": 2010-05-11T12:20:09.000Z,
    "streamName": "wolf",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T16:33:58.000Z,
    "id": "lynx1",
    "notificationTime": 2010-05-11T16:11:07.000Z,
    "startTime": 2010-05-11T16:22:09.000Z,
    "streamName": "lynx",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T18:34:58.000Z,
    "id": "cat6",
    "notificationTime": 2010-05-11T18:12:07.000Z,
    "startTime": 2010-05-11T18:23:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-11T22:35:58.000Z,
    "id": "dog3",
    "notificationTime": 2010-05-11T22:13:07.000Z,
    "startTime": 2010-05-11T22:24:09.000Z,
    "streamName": "dog",
    "tzOffset": 0,
  },
  Object {
    "endTime": 2010-05-12T12:15:58.000Z,
    "id": "cat7",
    "notificationTime": 2010-05-12T12:13:07.000Z,
    "startTime": 2010-05-12T12:14:09.000Z,
    "streamName": "cat",
    "tzOffset": 0,
  },
]
`;
